mediawiki/templates/mediawiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-app
spec:
  selector:
    app: mediawiki-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
